<resources>
    <string name="app_name">Droid AI</string>
    <string name="preference_file_key">Droid AI Preference</string>
    <string name="notifications">Notifications</string>
    <string name="crop_calendar">Calendar</string>
    <string name="camera">Camera</string>
    <string name="contact_our_experts">Our Experts</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Update Profile</string>
    <string name="log_out">Logout</string>
    <string name="explore_more">Explore More</string>
    <string name="respond">respond</string>
    <string name="pending">pending</string>


    <string name="location_permission_dialog_title">Location Permission Needed</string>
    <string name="location_permission_initial_dialog_message">This app needs the Location permission, please accept to use location functionality.</string>
    <string name="ok">OK</string>

    <string name="location_permission_denied_dialog_message">Location permission is essential for this app to provide its full functionality. Without it, some features may not work properly. Please enable location permission in the app settings.</string>


    <string-array name="district">
        <item>Gampaha</item>
        <item>Colombo</item>
        <item>Galle</item>
        <item>Kalutara</item>
    </string-array>

    <!-- Fragment Labels -->
    <string name="menu_home">Home</string>
    <string name="menu_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weather_info_title">Weather Info</string>
    <string name="_01">01.</string>
    <string name="take_photo">Take Photo</string>
    <string name="submit">Submit</string>
    <string name="question">Question</string>
    <string name="_03">03.</string>
    <string name="area">Area</string>
    <string name="submit_your_problem">Submit Your Problem</string>
    <string name="_02">02.</string>
    <string name="age_of_the_crop">Age of The Crop</string>
    <string name="todo">TODO</string>

    <!-- Image content Descriptions -->
    <string name="app_logo">App Logo</string>
    <string name="default_image_for_list">Default Image for recycle view</string>
    <string name="back_button_image">Action Bar back button image</string>
    <string name="alert_dialog_image">Alert Dialog Icon</string>
    <string name="progress_dialog_image">Progress Dialog Icon</string>
    <string name="favourite_button_image">Favourite button Icon</string>
    <string name="forward_arrow_icon">Forward Arrow Icon</string>
    <string name="fav_delete_icon">Favourite Delete Icon</string>
    <string name="radio_button_custom_icon">Radio Button Icon</string>

    <!-- Dialog messages -->
    <string name="logout_confirmation_message">Do you want to logout?</string>
    <string name="exit_confirmation_message">Do you want to exit?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="progressing">Progressing.....</string>
    <string name="call_inspector_desc">Call inspector</string>
    <string name="phone_number">011 2 111 222</string>
    <string name="tell_us_about_your_problem">TELL US ABOUT YOUR PROBLEM</string>
    <string name="call_us_now">Call Us Now</string>
    <string name="welcome">Welcome..!</string>
    <string name="date_and_time">Date and Time</string>
    <string name="this_is_firest_inquiry">This is firest inquiry</string>
    <string name="submit_your_answer">Submit Your Answer</string>
    <string name="information">Information</string>
    <string name="problem">Problem</string>
    <string name="answer">Answer</string>
    <string name="completed">COMPLETED</string>
    <string name="add_your_answer_here">Add Your Answer Here</string>
    <string name="response">Answer</string>
    <string name="pending_tab">PENDING</string>
    <string name="app_name_label">Droid AI</string>
    <string name="landing_page_content">Welcome to Droid AI, Connect, inquire, and cultivate success with our user-friendly platform designed to enhance the collaboration between agriculture inspectors and farmers</string>
    <string name="next">Next</string>
    <string name="login_page_header">Let\'s Sign You In</string>
    <string name="loginpagesubheader">Welcome</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="dontyouhaveaccount">"Don't you have an account? "</string>
    <string name="signup">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="invalid_username">Invalid Username</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="wait">Please wait.....</string>
    <string name="no_internet">No Internet</string>
    <string name="invalid_firstname">Invalid First Name</string>
    <string name="invalid_lastname">Invalid Last Name</string>
    <string name="invalid_contactno">Invalid Contact No</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="contactno">Contact No</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="back">Back</string>
    <string name="nic">NIC No</string>
    <string name="invalid_nic">Invalid NIC</string>
    <string name="future_works">Future Works</string>
    <string name="add_event">Add Event</string>
    <string name="date">Date</string>
    <string name="describe_your_event">Describe Your Event</string>
    <string name="add">Add Event</string>
    <string name="event_details_cannot_be_empty">Event details cannot be empty</string>
    <string name="date_select_error">Please select date first</string>
    <string name="delete_event_cofirmation">Do you want to delete this event?</string>

    <string name="input_activated_color">#FF71BDC5</string>
    <string name="input_default_color">#FF71BDC5</string>

    <string name="english">English</string>
    <string name="sinhala">සිංහල</string>
    <string name="japanese">日本語</string>
    <string name="change_language">Change Language</string>
    <string name="change_password">Change Password</string>
    <string name="cropcategories">Crop Categories</string>
    <string name="fragmentHome">Fragment Home</string>
    <string name="fragmentNotifications">Fragment Notifications</string>
    <string name="inquiries">Inquiries</string>
    <string name="retry">Retry</string>
    <string name="fillTheAnswerFeild">Please fill in the answer field</string>
    <string name="fillAllFeilds">Please fill in all fields</string>
    <string name="successfullMessage">Inquiry submitted successfully</string>

    <string name="failed_to_load_details">Failed to load Details</string>
    <string name="address">Address</string>
    <string name="district">District</string>
    <string name="dealer_locations">Dealer Locations</string>
    <string name="all">All</string>
    <string name="comingsoon">Coming Soon…</string>
    <string name="letsbegin">Sign Up Page</string>
    <string name="confirm_register">Do you want to register?</string>
    <string name="contactconfirmation">Do you want to contact us?</string>
    <string name="addeventconfirmation">Do you want to add this event?</string>

    <string-array name="district_array">
        <item>All</item>
        <item>Ampara</item>
        <item>Anuradhapura</item>
        <item>Badulla</item>
        <item>Batticaloa</item>
        <item>Colombo</item>
        <item>Galle</item>
        <item>Gampaha</item>
        <item>Hambantota</item>
        <item>Jaffna</item>
        <item>Kalutara</item>
        <item>Kandy</item>
        <item>Kegalle</item>
        <item>Kilinochchi</item>
        <item>Kurunegala</item>
        <item>Mannar</item>
        <item>Matale</item>
        <item>Matara</item>
        <item>Moneragala</item>
        <item>Mullaitivu</item>
        <item>Nuwara Eliya</item>
        <item>Polonnaruwa</item>
        <item>Puttalam</item>
        <item>Ratnapura</item>
        <item>Trincomalee</item>
        <item>Vavuniya</item>
    </string-array>
    <!-- strings for location services prompt -->
    <string name="location_services_disabled_title">Location Services Disabled</string>
    <string name="location_services_disabled_message">Location services are required for this feature. Please enable location services in your device settings.</string>
    <string name="enable">Enable</string>
    <string name="cancel">Cancel</string>

    <string name="Sunny">Sunny</string>
    <string name="MainlySunny">Mainly Sunny</string>
    <string name="PartlyCloudy">Partly Cloudy</string>
    <string name="Cloudy">Cloudy</string>
    <string name="Foggy">Foggy</string>
    <string name="RimeFog">Rime Fog</string>
    <string name="LightDrizzle">Light Drizzle</string>
    <string name="Drizzle">Drizzle</string>
    <string name="HeavyDrizzle">Heavy Drizzle</string>
    <string name="LightFreezingDrizzle">Light Freezing Drizzle</string>
    <string name="FreezingDrizzle">Freezing Drizzle</string>
    <string name="LightRain">Light Rain</string>
    <string name="Rain">Rain</string>
    <string name="HeavyRain">Heavy Rain</string>
    <string name="LightFreezingRain">Light Freezing Rain</string>
    <string name="FreezingRain">Freezing Rain</string>
    <string name="LightSnow">Light Snow</string>
    <string name="Snow">Snow</string>
    <string name="HeavySnow">Heavy Snow</string>
    <string name="SnowGrains">Snow Grains</string>
    <string name="LightShowers">Light Showers</string>
    <string name="Showers">Showers</string>
    <string name="HeavyShowers">Heavy Showers</string>
    <string name="LightSnowShowers">Light Snow Showers</string>
    <string name="SnowShowers">Snow Showers</string>
    <string name="Thunderstorm">Thunderstorm</string>
    <string name="LightThunderstormsWithHail">Light Thunderstorms With Hail</string>
    <string name="ThunderstormWithHail">Thunderstorm With Hail</string>
    <string name="unknown_conditions">Unknown Conditions</string>

    <string name="weather_icon_for_the_day" translatable="false">Weather icon for the day</string>
    <string name="invalid_confirm_password">Password Not Matching</string>
    <string name="newpassword">New Password</string>
    <string name="oldpassword">Old Password</string>
    <string name="passwordchangesuccess">Password Changed Successfully</string>

</resources>